--- a/ansible/roles/nginx/templates/default.conf.j2
+++ b/ansible/roles/nginx/templates/default.conf.j2
@@ -41,6 +41,10 @@ server {
                 client_max_body_size 2G;
                 #try_files $uri $uri/ =404;
         }
+        location /monitoring {
+                proxy_pass http://{{ local_ipv4_address }}:3005;
+                #try_files $uri $uri/ =404;
+        }
         location /auth {
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
