--- a/ansible/roles/dashboard/templates/environment.prod_local.ts.j2
+++ b/ansible/roles/dashboard/templates/environment.prod_local.ts.j2
@@ -3,12 +3,12 @@ export const environment = {
   apiURL: 'http://{{ api_endpoint }}:3002',
   config: "{{ access_type }}",
   stateCode: "{{ state_name }}",
+  loginNeeded: "{{ loginpage_status }}",
   cqubeVersion: "{{ cqube_version }}",
   numberFormat: {
     reports: {
       locale: 'en-IN',
       format: 'short'
     }
-  },
-  google_analytics_tracking_id: "{{ google_analytics_tracking_id }}",
+  }
 };
