--- a/ansible/roles/dashboard/templates/environment_local.ts.j2
+++ b/ansible/roles/dashboard/templates/environment_local.ts.j2
@@ -4,11 +4,11 @@ export const environment = {
   config: "{{ access_type }}",
   cqubeVersion: "{{ cqube_version }}",
   stateCode: "{{ state_name }}",
+  loginNeeded: "{{ loginpage_status }}",
   numberFormat: {
     reports: {
       locale: 'en-IN',
       format: 'short'
     }
-  },
-  google_analytics_tracking_id: "{{ google_analytics_tracking_id }}",
+  }
 };
