--- a/ansible/roles/configurations/templates/program_selector.csv.j2
+++ b/ansible/roles/configurations/templates/program_selector.csv.j2
@@ -1,8 +1,8 @@
 program_id,status,acess_type
-teacherAttendance,{% if teacherAttendance == true %}true{% endif %}{% if teacherAttendance == false %}false{% endif %}{{''}},{% if teacherAttendance_loginStatus == public %}public{% endif %}{% if teacherAttendance_loginStatus == private %}private{% endif %}{{''}}
-pgi,{% if pgi == true %}true{% endif %}{% if pgi == false %}false{% endif %}{{''}},{% if pgi_loginStatus == public %}public{% endif %}{% if pgi_loginStatus == private %}private{% endif %}{{''}}
-pmPoshan,{% if pmPoshan == true %}true{% endif %}{% if pmPoshan == false %}false{% endif %}{{''}},{% if pmPoshan_loginStatus == public %}public{% endif %}{% if pmPoshan_loginStatus == private %}private{% endif %}{{''}}
-udise,{% if udise == true %}true{% endif %}{% if udise == false %}false{% endif %}{{''}},{% if udise_loginStatus == public %}public{% endif %}{% if udise_loginStatus == private %}private{% endif %}{{''}}
-nas,{% if nas == true %}true{% endif %}{% if nas == false %}false{% endif %}{{''}},{% if nas_loginStatus == public %}public{% endif %}{% if nas_loginStatus == private %}private{% endif %}{{''}}
-diksha,{% if diksha == true %}true{% endif %}{% if diksha == false %}false{% endif %}{{''}},{% if diksha_loginStatus == public %}public{% endif %}{% if diksha_loginStatus == private %}private{% endif %}{{''}}
-nishtha,{% if nishtha == true %}true{% endif %}{% if nishtha == false %}false{% endif %}{{''}},{% if nishtha_loginStatus == public %}public{% endif %}{% if nishtha_loginStatus == private %}private{% endif %}{{''}}
+teacherAttendance,{% if teacherAttendance == true %}true{% endif %}{% if teacherAttendance == false %}false{% endif %}{{''}},{% if teacherAttendance_loginStatus == false %}public{% endif %}{% if teacherAttendance_loginStatus == true %}private{% endif %}{{''}}
+pgi,{% if pgi == true %}true{% endif %}{% if pgi == false %}false{% endif %}{{''}},{% if pgi_loginStatus == false %}public{% endif %}{% if pgi_loginStatus == true %}private{% endif %}{{''}}
+pmPoshan,{% if pmPoshan == true %}true{% endif %}{% if pmPoshan == false %}false{% endif %}{{''}},{% if pmPoshan_loginStatus == false %}public{% endif %}{% if pmPoshan_loginStatus == true %}private{% endif %}{{''}}
+udise,{% if udise == true %}true{% endif %}{% if udise == false %}false{% endif %}{{''}},{% if udise_loginStatus == false %}public{% endif %}{% if udise_loginStatus == true %}private{% endif %}{{''}}
+nas,{% if nas == true %}true{% endif %}{% if nas == false %}false{% endif %}{{''}},{% if nas_loginStatus == false %}public{% endif %}{% if nas_loginStatus == true %}private{% endif %}{{''}}
+diksha,{% if diksha == true %}true{% endif %}{% if diksha == false %}false{% endif %}{{''}},{% if diksha_loginStatus == false %}public{% endif %}{% if diksha_loginStatus == true %}private{% endif %}{{''}}
+nishtha,{% if nishtha == true %}true{% endif %}{% if nishtha == false %}false{% endif %}{{''}},{% if nishtha_loginStatus == false %}public{% endif %}{% if nishtha_loginStatus == true %}private{% endif %}{{''}}
