--- a/ansible/roles/dashboard/templates/environment.prod_local.ts.j2
+++ b/ansible/roles/dashboard/templates/environment.prod_local.ts.j2
@@ -5,6 +5,8 @@ export const environment = {
   stateCode: "{{ state_name }}",
   loginNeeded: "{{ loginpage_status }}",
   cqubeVersion: "{{ cqube_version }}",
+  guestUsername: guest-user,
+  guestPassword: Guest@123,
   numberFormat: {
     reports: {
       locale: 'en-IN',
