--- a/ansible/roles/dashboard/templates/environment.ts.j2
+++ b/ansible/roles/dashboard/templates/environment.ts.j2
@@ -5,8 +5,8 @@ export const environment = {
   cqubeVersion: "{{ cqube_version }}",
   stateCode: "{{ state_name }}",
   loginNeeded: "{{ loginpage_status }}",
-  guestUsername: guest-user,
-  guestPassword: Guest@123,
+  guestUsername: "guest-user",
+  guestPassword: "Guest@123",
   numberFormat: {
     reports: {
       locale: 'en-IN',
