--- a/ansible/roles/dashboard/templates/environment.prod_local.ts.j2
+++ b/ansible/roles/dashboard/templates/environment.prod_local.ts.j2
@@ -3,7 +3,7 @@ export const environment = {
   apiURL: 'http://{{ api_endpoint }}:3002',
   config: "{{ access_type }}",
   stateCode: "{{ state_name }}",
-  loginNeeded: "{{ loginpage_status }}",
+  loginNeeded: {% if loginpage_status == true %}true{% else %}false{% endif %}{{''}},
   cqubeVersion: "{{ cqube_version }}",
   guestUsername: "guest-user",
   guestPassword: "Guest@123",
