--- a/ansible/roles/configurations/templates/program_selector.csv.j2
+++ b/ansible/roles/configurations/templates/program_selector.csv.j2
@@ -1,7 +1,7 @@
 program_id,status,acess_type
-teacherAttendance,{% if teacherAttendance == true %}true{% endif %}{% if teacherAttendance == false %}false{% endif %}{{''}},{% if teacherAttendance_loginStatus == false %}public{% endif %}{% if teacherAttendance_loginStatus == true %}private{% endif %}{{''}}
+sch_att,{% if sch_att == true %}true{% endif %}{% if sch_att == false %}false{% endif %}{{''}},{% if sch_att_loginStatus == false %}public{% endif %}{% if sch_att_loginStatus == true %}private{% endif %}{{''}}
 pgi,{% if pgi == true %}true{% endif %}{% if pgi == false %}false{% endif %}{{''}},{% if pgi_loginStatus == false %}public{% endif %}{% if pgi_loginStatus == true %}private{% endif %}{{''}}
-pmPoshan,{% if pmPoshan == true %}true{% endif %}{% if pmPoshan == false %}false{% endif %}{{''}},{% if pmPoshan_loginStatus == false %}public{% endif %}{% if pmPoshan_loginStatus == true %}private{% endif %}{{''}}
+pm_poshan,{% if pm_poshan == true %}true{% endif %}{% if pm_poshan == false %}false{% endif %}{{''}},{% if pm_poshan_loginStatus == false %}public{% endif %}{% if pm_poshan_loginStatus == true %}private{% endif %}{{''}}
 udise,{% if udise == true %}true{% endif %}{% if udise == false %}false{% endif %}{{''}},{% if udise_loginStatus == false %}public{% endif %}{% if udise_loginStatus == true %}private{% endif %}{{''}}
 nas,{% if nas == true %}true{% endif %}{% if nas == false %}false{% endif %}{{''}},{% if nas_loginStatus == false %}public{% endif %}{% if nas_loginStatus == true %}private{% endif %}{{''}}
 diksha,{% if diksha == true %}true{% endif %}{% if diksha == false %}false{% endif %}{{''}},{% if diksha_loginStatus == false %}public{% endif %}{% if diksha_loginStatus == true %}private{% endif %}{{''}}
