--- a/ansible/roles/nginx/templates/default.conf.j2
+++ b/ansible/roles/nginx/templates/default.conf.j2
@@ -48,6 +48,8 @@ server {
         }
         location /grafana {
                 proxy_pass http://{{ local_ipv4_address }}:3005;
+                proxy_set_header Host $http_host;
+                proxy_http_version 1.1;
                 #try_files $uri $uri/ =404;
         }
         location /auth {
