updated userinfo api

--- a/ansible/roles/configurations/templates/keycloak.sh.j2
+++ b/ansible/roles/configurations/templates/keycloak.sh.j2
@@ -40,5 +40,5 @@ EOF
 
 sudo docker exec -i querybuilder_app sh << 'EOF'
 apk add curl
-curl -X GET http://localhost:3002/queryBuilder/addUserInfo
+curl -X GET http://localhost:3002/addUserInfo
 EOF
