modified vsk and nvsk program selector files and added ssl configuration

--- a/ansible/roles/configurations/templates/docker-compose_public.yml.j2
+++ b/ansible/roles/configurations/templates/docker-compose_public.yml.j2
@@ -125,6 +125,7 @@ services:
     restart: always
     volumes:
       - /opt/cqube/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - /opt/cqube/nginx/certs/{{ api_endpoint }}:/etc/ssl/{{ api_endpoint }}
     ports:
       - 80:80
       - 443:443
