--- a/ansible/roles/configurations/templates/program_selector.csv.j2
+++ b/ansible/roles/configurations/templates/program_selector.csv.j2
@@ -1,8 +1,8 @@
 program_id,status,acess_type
-sch_att,{% if sch_att == true %}true{% endif %}{% if sch_att == false %}false{% endif %}{{''}},{% if sch_att_loginStatus == false %}public{% endif %}{% if sch_att_loginStatus == true %}private{% endif %}{{''}}
-pgi,{% if pgi == true %}true{% endif %}{% if pgi == false %}false{% endif %}{{''}},{% if pgi_loginStatus == false %}public{% endif %}{% if pgi_loginStatus == true %}private{% endif %}{{''}}
-pm_poshan,{% if pm_poshan == true %}true{% endif %}{% if pm_poshan == false %}false{% endif %}{{''}},{% if pm_poshan_loginStatus == false %}public{% endif %}{% if pm_poshan_loginStatus == true %}private{% endif %}{{''}}
-udise,{% if udise == true %}true{% endif %}{% if udise == false %}false{% endif %}{{''}},{% if udise_loginStatus == false %}public{% endif %}{% if udise_loginStatus == true %}private{% endif %}{{''}}
-nas,{% if nas == true %}true{% endif %}{% if nas == false %}false{% endif %}{{''}},{% if nas_loginStatus == false %}public{% endif %}{% if nas_loginStatus == true %}private{% endif %}{{''}}
-diksha,{% if diksha == true %}true{% endif %}{% if diksha == false %}false{% endif %}{{''}},{% if diksha_loginStatus == false %}public{% endif %}{% if diksha_loginStatus == true %}private{% endif %}{{''}}
-nishtha,{% if nishtha == true %}true{% endif %}{% if nishtha == false %}false{% endif %}{{''}},{% if nishtha_loginStatus == false %}public{% endif %}{% if nishtha_loginStatus == true %}private{% endif %}{{''}}
+sch_att,{% if sch_att_state == true %}true{% endif %}{% if sch_att_state == false %}false{% endif %}{{''}},{% if sch_att_state_loginStatus == 'public' %}public{% endif %}{% if sch_att_state_loginStatus == 'private' %}private{% endif %}{{''}}
+pgi,{% if pgi_state == true %}true{% endif %}{% if pgi_state == false %}false{% endif %}{{''}},{% if pgi_state_loginStatus == 'public' %}public{% endif %}{% if pgi_state_loginStatus == 'private' %}private{% endif %}{{''}}
+pm_poshan,{% if pm_poshan_state == true %}true{% endif %}{% if pm_poshan_state == false %}false{% endif %}{{''}},{% if pm_poshan_state_loginStatus == 'public' %}public{% endif %}{% if pm_poshan_state_loginStatus == 'private' %}private{% endif %}{{''}}
+udise,{% if udise_state == true %}true{% endif %}{% if udise_state == false %}false{% endif %}{{''}},{% if udise_state_loginStatus == 'public' %}public{% endif %}{% if udise_state_loginStatus == 'private' %}private{% endif %}{{''}}
+nas,{% if nas_state == true %}true{% endif %}{% if nas_state == false %}false{% endif %}{{''}},{% if nas_state_loginStatus == 'public' %}public{% endif %}{% if nas_state_loginStatus == 'private' %}private{% endif %}{{''}}
+diksha,{% if diksha_state == true %}true{% endif %}{% if diksha_state == false %}false{% endif %}{{''}},{% if diksha_state_loginStatus == 'public' %}public{% endif %}{% if diksha_state_loginStatus == 'private' %}private{% endif %}{{''}}
+nishtha,{% if nishtha_state == true %}true{% endif %}{% if nishtha_state == false %}false{% endif %}{{''}},{% if nishtha_state_loginStatus == 'public' %}public{% endif %}{% if nishtha_state_loginStatus == 'private' %}private{% endif %}{{''}}
