--- a/ansible/roles/configurations/templates/localhost_defaults.ini.j2
+++ b/ansible/roles/configurations/templates/localhost_defaults.ini.j2
@@ -48,7 +48,7 @@ domain = localhost
 enforce_domain = false
 
 # The full public facing url
-root_url = %(protocol)s://%(domain)s:%(http_port)s/grafana
+root_url = %(protocol)s://%(domain)s:3005/grafana
 
 # Serve Grafana from subpath specified in `root_url` setting. By default it is set to `false` for compatibility reasons.
 serve_from_sub_path = true
