--- a/ansible/roles/configurations/templates/public_defaults.ini.j2
+++ b/ansible/roles/configurations/templates/public_defaults.ini.j2
@@ -32,7 +32,7 @@ provisioning = conf/provisioning
 #################################### Server ##############################
 [server]
 # Protocol (http, https, h2, socket)
-protocol = http
+protocol = https
 
 # The ip address to bind to, empty will bind to all interfaces
 http_addr =
@@ -48,7 +48,7 @@ domain = {{ api_endpoint }}
 enforce_domain = false
 
 # The full public facing url
-root_url = %(protocol)s://%(domain)s:%(http_port)s/grafana
+root_url = %(protocol)s://%(domain)s/grafana
 
 # Serve Grafana from subpath specified in `root_url` setting. By default it is set to `false` for compatibility reasons.
 serve_from_sub_path = true
@@ -63,8 +63,8 @@ static_root_path = public
 enable_gzip = false
 
 # https certs & key file
-cert_file =
-cert_key =
+cert_file = /usr/share/grafana/{{ api_endpoint }}/cqube-cert.pem
+cert_key = /usr/share/grafana/{{ api_endpoint }}/cqube-key.pem
 
 # Unix socket gid
 # Changing the gid of a file without privileges requires that the target group is in the group of the process and that the process is the file owner
