reverted ssl auto configuration

--- a/ansible/roles/configurations/templates/public_defaults.ini.j2
+++ b/ansible/roles/configurations/templates/public_defaults.ini.j2
@@ -63,8 +63,8 @@ static_root_path = public
 enable_gzip = false
 
 # https certs & key file
-cert_file = /usr/share/grafana/{{ api_endpoint }}/cqube-cert.pem
-cert_key = /usr/share/grafana/{{ api_endpoint }}/cqube-key.pem
+cert_file = 
+cert_key = 
 
 # Unix socket gid
 # Changing the gid of a file without privileges requires that the target group is in the group of the process and that the process is the file owner
