--- a/ansible/roles/configurations/templates/keycloak.sh.j2
+++ b/ansible/roles/configurations/templates/keycloak.sh.j2
@@ -25,7 +25,7 @@ sudo docker exec -i keycloak_app sh << 'EOF'
 /opt/jboss/keycloak/bin/kcadm.sh create users -r cQube -s username=guest-user -s enabled=true
 /opt/jboss/keycloak/bin/kcadm.sh set-password --username guest-user -r cQube -p Guest@123
 
-/opt/jboss/keycloak/bin/kcadm.sh create roles -r cQube -s name=admin
+/opt/jboss/keycloak/bin/kcadm.sh create roles -r cQube -s name=admin -s 'attributes={"reports":["telemetry"]}'
 
 guest_variable="\"$(cat /guest_program_file)\""
 
