--- a/ansible/roles/configurations/templates/national_program_selector.csv.j2
+++ b/ansible/roles/configurations/templates/national_program_selector.csv.j2
@@ -9,4 +9,4 @@ udise,{% if udise_nation == true %}true{% endif %}{% if udise_nation == false %}
 nas,{% if nas_nation == true %}true{% endif %}{% if nas_nation == false %}false{% endif %}{{''}},{% if nas_nation_loginStatus == 'public' %}public{% endif %}{% if nas_nation_loginStatus == 'private' %}private{% endif %}{{''}}
 diksha,{% if diksha_nation == true %}true{% endif %}{% if diksha_nation == false %}false{% endif %}{{''}},{% if diksha_nation_loginStatus == 'public' %}public{% endif %}{% if diksha_nation_loginStatus == 'private' %}private{% endif %}{{''}}
 nishtha,{% if nishtha_nation == true %}true{% endif %}{% if nishtha_nation == false %}false{% endif %}{{''}},{% if nishtha_nation_loginStatus == 'public' %}public{% endif %}{% if nishtha_nation_loginStatus == 'private' %}private{% endif %}{{''}}
-
+telemetry,{% if telemetry_nation == true %}true{% endif %}{% if telemetry_nation == false %}false{% endif %}{{''}},{% if telemetry_nation_loginStatus == 'public' %}public{% endif %}{% if telemetry_nation_loginStatus == 'private' %}private{% endif %}{{''}}
