--- a/ansible/roles/generator/templates/config.ini_pg_aws.j2
+++ b/ansible/roles/generator/templates/config.ini_pg_aws.j2
@@ -14,3 +14,5 @@ program_path = /opt/nifi/nifi-current/Sunbird-cQube-processing-ms/impl/c-qube/in
 processing_time = * * * * * ?
 plugin_time = * * * * * ?
 adapter_schedule_time = * * * * * ?
+INGESTION_URL = http://ingest_app:3000
+SPEC_URL = http://spec_app:3001
