--- a/ansible/roles/nginx/templates/default.conf.j2
+++ b/ansible/roles/nginx/templates/default.conf.j2
@@ -1,6 +1,4 @@
 server {
-       listen 80;
-       listen [::]:80;
 
         gzip on;
         gzip_types      application/javascript text/css;
@@ -13,7 +11,6 @@ server {
         add_header X-Frame-Options "SAMEORIGIN";
         add_header Strict-Transport-Security 'max-age=31536000; includeSubDomains; preload';
         add_header X-Content-Type-Options nosniff;
-        #add_header Content-Security-Policy "default-src https://apis.mapmyindia.com 'self'; font-src https://fonts.gstatic.com https://cdnjs.cloudflare.com https://fonts.googleapis.com 'self' data:; script-src https://code.jquery.com https://cdnjs.cloudflare.com https://apis.mapmyindia.com 'unsafe-inline' 'self'; style-src https://fonts.googleapis.com https://cdnjs.cloudflare.com https://maxcdn.bootstrapcdn.com 'unsafe-inline' 'self'; img-src https://*.basemaps.cartocdn.com 'self'";
         add_header X-XSS-Protection "1; mode=block";
         add_header Content-Security-Policy "https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css";
         add_header Referrer-Policy "strict-origin";
@@ -60,4 +57,23 @@ server {
                 proxy_set_header X-Forwarded-Proto https;
                 proxy_set_header Accept-Encoding "";
         }
+      listen [::]:443 ssl ipv6only=on;
+      listen 443 ssl;
+      ssl_certificate /etc/ssl_certificates/{{ nginx_cert_file }};
+      ssl_certificate_key /etc/ssl_certificates/{{ nginx_key_file }};
+}
+
+server {
+    if ($host = {{ api_endpoint }}) {
+        return 301 https://$host$request_uri;
+    }
+
+
+        listen       80;
+        listen  [::]:80;        
+
+        server_name {{ api_endpoint }};
+    return 404;
+
+
 }
