--- a/ansible/roles/ingestion/templates/public.env.j2
+++ b/ansible/roles/ingestion/templates/public.env.j2
@@ -2,7 +2,7 @@ JWT_SECRET= 'cqube_secret'
 STATE_CODE = "{{ state_name }}"
 STATE_ID = "{{ state_id }}"
 NVSK_URL = "https://{{ nvsk_api_endpoint }}/api/ingestion"
-PROGRAM_NAMES = {% if access_type == 'VSK' %}'pm-poshan,nas,udise'{% else %}NA{% endif %}
+PROGRAM_NAMES = {% if access_type == 'VSK' %}pm-poshan,nas,udise{% else %}NA{% endif %}
 DB_HOST = 'postgres_app'
 DB_PORT = 5432
 DB_USERNAME = "{{ db_user }}"
