updated config.ini of adapters

--- a/ansible/roles/generator/templates/config.ini_oracle.j2
+++ b/ansible/roles/generator/templates/config.ini_oracle.j2
@@ -3,3 +3,6 @@
 # storage credentials ####################
 storage_type = {{ storage_type }}
 oracle_bucket = {{ oracle_bucket }}
+QUERY_BUILDER_URL = http://querybuilder_app:3002
+INGESTION_URL = http://ingest_app:3000
+SPEC_URL = http://spec_app:3001
