--- a/ansible/roles/generator/templates/config.ini_aws.j2
+++ b/ansible/roles/generator/templates/config.ini_aws.j2
@@ -5,3 +5,6 @@ storage_type = {{ storage_type }}
 aws_access_key = {{ aws_access_key }}
 aws_secret_key = {{ aws_secret_key }}
 s3_bucket = {{ s3_bucket }}
+QUERY_BUILDER_URL = http://querybuilder_app:3002
+INGESTION_URL = http://ingest_app:3000
+SPEC_URL = http://spec_app:3001
