removed telemetry from public/private access and updated adapter config file

--- a/ansible/roles/generator/templates/config.ini_azure.j2
+++ b/ansible/roles/generator/templates/config.ini_azure.j2
@@ -5,6 +5,7 @@
 storage_type = {{ storage_type }}
 azure_connection_string = {{ azure_connection_string }}
 azure_container = {{ azure_container }}
+instance_type = {{ access_type }}
 QUERY_BUILDER_URL = http://querybuilder_app:3002
 INGESTION_URL = http://ingest_app:3000
 SPEC_URL = http://spec_app:3001
