--- a/ansible/roles/generator/templates/config.ini_local.j2
+++ b/ansible/roles/generator/templates/config.ini_local.j2
@@ -8,6 +8,7 @@ minio_port = 9000
 minio_username = {{ minio_username }}
 minio_password = {{ minio_password }}
 minio_bucket = {{ minio_bucket }}
+instance_type = {{ access_type }}
 QUERY_BUILDER_URL = http://querybuilder_app:3002
 INGESTION_URL = http://ingest_app:3000
 SPEC_URL = http://spec_app:3001
