--- a/ansible/roles/generator/templates/config.ini_pg_aws.j2
+++ b/ansible/roles/generator/templates/config.ini_pg_aws.j2
@@ -9,6 +9,7 @@ s3_secret_key = {{ aws_secret_key }}
 s3_input_bucket = {{ s3_bucket }}
 instance_type = {{ access_type }}
 state_name = {{ state_name }}
+data_pull = {{ data_pull_status }}
 dimension_path = /opt/nifi/nifi-current/Sunbird-cQube-processing-ms/impl/c-qube/ingest/dimensions/
 program_path = /opt/nifi/nifi-current/Sunbird-cQube-processing-ms/impl/c-qube/ingest/programs/
 processing_time = * * * * * ?
