--- a/ansible/roles/generator/templates/config.ini_pg_oracle.j2
+++ b/ansible/roles/generator/templates/config.ini_pg_oracle.j2
@@ -7,6 +7,7 @@ nifi_port = 8096
 oracle_bucket = {{ oracle_bucket }}
 instance_type = {{ access_type }}
 state_name = {{ state_name }}
+data_pull = {{ data_pull_status }}
 dimension_path = /opt/nifi/nifi-current/Sunbird-cQube-processing-ms/impl/c-qube/ingest/dimensions/
 program_path = /opt/nifi/nifi-current/Sunbird-cQube-processing-ms/impl/c-qube/ingest/programs/
 processing_time = * * * * * ?
