--- a/ansible/roles/generator/templates/config.ini_pg_azure.j2
+++ b/ansible/roles/generator/templates/config.ini_pg_azure.j2
@@ -10,7 +10,7 @@ azure_connection_string = {{ azure_connection_string }}
 azure_container_name = {{ azure_container }}
 instance_type = {{ access_type }}
 state_name = {{ state_name }}
-data_pull = {{ data_pull_status }}
+data_pull = {% if data_pull_status == true %}true{% else %}false{% endif %}{{''}}
 dimension_path = /opt/nifi/nifi-current/Sunbird-cQube-processing-ms/impl/c-qube/ingest/dimensions/
 program_path = /opt/nifi/nifi-current/Sunbird-cQube-processing-ms/impl/c-qube/ingest/programs/
 processing_time = * * * * * ?
