--- a/ansible/roles/configurations/templates/docker-compose_public.yml.j2
+++ b/ansible/roles/configurations/templates/docker-compose_public.yml.j2
@@ -142,7 +142,18 @@ services:
       - 4201:4201
     networks:
       cqube_net:
-        ipv4_address: "10.0.0.14"  
+        ipv4_address: "10.0.0.14" 
+  csvParser_app:
+    container_name: csvParser_app
+    image: csvparser-ms:1
+    restart: always
+    ports:
+      - ${EXTERNAL_PORT-5005}:3004
+    environment:
+      TMP_BASE_PATH: './tmp'
+    networks:
+      cqube_net:
+        ipv4_address: "10.0.0.20" 
 networks:
   cqube_net:
     driver: bridge
