--- a/ansible/roles/configurations/templates/docker-compose_localhost.yml.j2
+++ b/ansible/roles/configurations/templates/docker-compose_localhost.yml.j2
@@ -99,7 +99,7 @@ services:
         ipv4_address: "10.0.0.11"
   csvParser_app:
     container_name: csvParser_app
-    image: csvparser-ms:1
+    image: csvparser_ms:1
     restart: always
     ports:
       - ${EXTERNAL_PORT-5005}:3004
