--- a/ansible/roles/configurations/templates/docker-compose_public.yml.j2
+++ b/ansible/roles/configurations/templates/docker-compose_public.yml.j2
@@ -145,7 +145,7 @@ services:
         ipv4_address: "10.0.0.14" 
   csvParser_app:
     container_name: csvParser_app
-    image: csvparser-ms:1
+    image: csvparser_ms:1
     restart: always
     ports:
       - ${EXTERNAL_PORT-5005}:3004
