--- a/ansible/roles/nifi/templates/cqube-ingest-install.sh.j2
+++ b/ansible/roles/nifi/templates/cqube-ingest-install.sh.j2
@@ -9,7 +9,7 @@
 rm -rf cqube-ingest.zip
 rm -rf Sunbird-cQube*
 echo "***************************************************** Downloading the zip file ******************************************************"
-wget -O cqube-ingest.zip 'https://api.github.com/repos/Sunbird-cQube/processing-ms/zipball/staging-sep15'
+wget -O cqube-ingest.zip 'https://api.github.com/repos/Sunbird-cQube/processing-ms/zipball/release-v5.0.5-sep15'
 echo "****************************************************** Unzipping the zip file *******************************************************"
 unzip cqube-ingest.zip
 mv Sunbird-cQube* Sunbird-cQube-processing-ms
