updated minio proxy changes and dashboad access changes

--- a/ansible/roles/configurations/templates/keycloak.sh.j2
+++ b/ansible/roles/configurations/templates/keycloak.sh.j2
@@ -14,9 +14,9 @@ sudo docker exec -i keycloak_app sh << 'EOF'
 /opt/jboss/keycloak/bin/kcadm.sh create realms -s realm=cQube -s enabled=true -o
 
 {% if mode_of_installation == 'localhost' %}
-/opt/jboss/keycloak/bin/kcadm.sh create clients -r cQube -s clientId=cqube-5.0 -s enabled=true -s clientAuthenticatorType=client-secret -s secret=d0b8122f-8dfb-46h7-b69a-f5cc4e25d000 -s 'redirectUris=["http://{{ api_endpoint }}/*"]' -s directAccessGrantsEnabled=true
+/opt/jboss/keycloak/bin/kcadm.sh create clients -r cQube -s clientId=cqube-5.0 -s enabled=true -s clientAuthenticatorType=client-secret -s secret=d0b8122f-8dfb-46h7-b69a-f5cc4e25d000 -s 'redirectUris=["http://{{ api_endpoint }}:4200/*"]' -s directAccessGrantsEnabled=true
 {% else %}
-/opt/jboss/keycloak/bin/kcadm.sh create clients -r cQube -s clientId=cqube-5.0 -s enabled=true -s clientAuthenticatorType=client-secret -s secret=d0b8122f-8dfb-46h7-b69a-f5cc4e25d000 -s 'redirectUris=["https://{{ api_endpoint }}/*"]' -s directAccessGrantsEnabled=true
+/opt/jboss/keycloak/bin/kcadm.sh create clients -r cQube -s clientId=cqube-5.0 -s enabled=true -s clientAuthenticatorType=client-secret -s secret=d0b8122f-8dfb-46h7-b69a-f5cc4e25d000 -s 'redirectUris=["https://{{ api_endpoint }}/dashboard/*"]' -s directAccessGrantsEnabled=true
 {% endif %}
 
 /opt/jboss/keycloak/bin/kcadm.sh create users -r cQube -s username={{ keycloak_adm_name }} -s enabled=true
