--- a/ansible/roles/nginx/templates/default.conf.j2
+++ b/ansible/roles/nginx/templates/default.conf.j2
@@ -28,7 +28,7 @@ server {
 
         server_name {{ api_endpoint }};
 
-        location / {
+        location /dashboard {
                 proxy_pass http://{{ local_ipv4_address }}:4200;
                 #client_max_body_size 2G;
                 #try_files $uri $uri/ =404;
@@ -57,6 +57,35 @@ server {
                 proxy_set_header X-Forwarded-Proto https;
                 proxy_set_header Accept-Encoding "";
         }
+        location / {
+                proxy_pass http://{{ local_ipv4_address }}:9000;
+                proxy_set_header Host $http_host;
+                proxy_set_header X-Real-IP $remote_addr;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header X-Forwarded-Proto $scheme;
+                proxy_connect_timeout 300;
+                # Default is HTTP/1, keepalive is only enabled in HTTP/1.1
+                proxy_http_version 1.1;
+                proxy_set_header Connection "";
+                chunked_transfer_encoding off;
+        }
+        location /minio/ui/ {
+                rewrite ^/minio/ui/(.*) /$1 break;
+                proxy_set_header Host $http_host;
+                proxy_set_header X-Real-IP $remote_addr;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header X-Forwarded-Proto $scheme;
+                proxy_set_header X-NginX-Proxy true;
+                # This is necessary to pass the correct IP to be hashed
+                real_ip_header X-Real-IP;
+                proxy_connect_timeout 300;
+                proxy_http_version 1.1;
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection "upgrade";
+                chunked_transfer_encoding off;
+                proxy_pass http://{{ local_ipv4_address }}:9001;
+   }
+
       listen [::]:443 ssl ipv6only=on;
       listen 443 ssl;
       ssl_certificate /etc/ssl_certificates/{{ nginx_cert_file }};
