--- a/ansible/roles/nifi/templates/cqube-ingest-install.sh.j2
+++ b/ansible/roles/nifi/templates/cqube-ingest-install.sh.j2
@@ -9,7 +9,7 @@ echo "******************************************************* Response from serv
 rm -rf cqube-ingest.zip
 rm -rf Sunbird-cQube*
 echo "***************************************************** Downloading the zip file ******************************************************"
-wget -O cqube-ingest.zip 'https://api.github.com/repos/Sunbird-cQube/processing-ms/zipball/releasev5.0.3_nvsk-Oct_20'
+wget -O cqube-ingest.zip 'https://api.github.com/repos/Sunbird-cQube/processing-ms/zipball/releasev5.0.3_nvsk-Nov_02'
 echo "****************************************************** Unzipping the zip file *******************************************************"
 unzip cqube-ingest.zip
 mv Sunbird-cQube* Sunbird-cQube-processing-ms
